native_math/frb_generated.h

// EXTRA BEGIN
typedef struct DartCObject *WireSyncRust2DartDco;
typedef int64_t DartPort;
typedef bool (*DartPostCObjectFnType)(DartPort port_id, void *message);
void store_dart_post_cobject(DartPostCObjectFnType ptr);
typedef struct wire_cst_list_prim_f_64_strict {
  double *ptr;
  int32_t len;
} wire_cst_list_prim_f_64_strict;
typedef struct wire_cst_list_list_prim_f_64_strict {
  struct wire_cst_list_prim_f_64_strict **ptr;
  int32_t len;
} wire_cst_list_list_prim_f_64_strict;
typedef struct wire_cst_list_prim_f_64_loose {
  double *ptr;
  int32_t len;
} wire_cst_list_prim_f_64_loose;
typedef struct wire_cst_list_prim_u_8_strict {
  uint8_t *ptr;
  int32_t len;
} wire_cst_list_prim_u_8_strict;
void frbgen_kivixa_wire__crate__api__anova(int64_t port_,
                                           struct wire_cst_list_list_prim_f_64_strict *groups,
                                           double alpha);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__catalan(uint64_t n);
void frbgen_kivixa_wire__crate__api__chi_squared_test(int64_t port_,
                                                      struct wire_cst_list_prim_f_64_loose *observed,
                                                      struct wire_cst_list_prim_f_64_loose *expected,
                                                      double alpha);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__combinations(uint64_t n, uint64_t r);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__complex_convert(double real,
                                                                     double imag,
                                                                     bool to_polar);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__complex_operation(double a_real,
                                                                       double a_imag,
                                                                       double b_real,
                                                                       double b_imag,
                                                                       struct wire_cst_list_prim_u_8_strict *operation);
void frbgen_kivixa_wire__crate__api__compute_limit(int64_t port_,
                                                   struct wire_cst_list_prim_u_8_strict *expression,
                                                   struct wire_cst_list_prim_u_8_strict *variable,
                                                   double approach_value,
                                                   bool from_left,
                                                   bool from_right);
void frbgen_kivixa_wire__crate__api__compute_statistics(int64_t port_,
                                                        struct wire_cst_list_prim_f_64_loose *data);