lib/src/rust_math/frb_generated.io.dart


  @protected
  void sse_encode_confidence_interval_result(
    ConfidenceIntervalResult self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_correlation_result(
    CorrelationResult self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_discrete_result(
    DiscreteResult self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_distribution_result(
    DistributionResult self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_expression_result(
    ExpressionResult self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_f_64(double self, SseSerializer serializer);

  @protected
  void sse_encode_graph_point(GraphPoint self, SseSerializer serializer);

  @protected
  void sse_encode_graph_result(GraphResult self, SseSerializer serializer);

  @protected
  void sse_encode_hypothesis_test_result(
    HypothesisTestResult self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_list_String(List<String> self, SseSerializer serializer);

  @protected
  void sse_encode_list_graph_point(
    List<GraphPoint> self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_list_list_prim_f_64_strict(
    List<Float64List> self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_list_matrix_result(
    List<MatrixResult> self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_list_prim_f_64_loose(
    List<double> self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_list_prim_f_64_strict(
    Float64List self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_list_prim_u_64_strict(
    Uint64List self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_list_prim_u_8_strict(
    Uint8List self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_list_record_f_64_f_64(
    List<(double, double)> self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_list_record_string_f_64(
    List<(String, double)> self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_list_unit_result(
    List<UnitResult> self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_matrix_decomposition(
    MatrixDecomposition self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_matrix_result(MatrixResult self, SseSerializer serializer);

  @protected
  void sse_encode_opt_String(String? self, SseSerializer serializer);

  @protected
  void sse_encode_opt_box_autoadd_bool(bool? self, SseSerializer serializer);

  @protected
  void sse_encode_opt_box_autoadd_f_64(double? self, SseSerializer serializer);

  @protected
  void sse_encode_opt_box_autoadd_usize(BigInt? self, SseSerializer serializer);

  @protected
  void sse_encode_opt_list_prim_f_64_strict(
    Float64List? self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_record_f_64_f_64(
    (double, double) self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_record_list_record_f_64_f_64_list_record_f_64_f_64(
    (List<(double, double)>, List<(double, double)>) self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_record_string_f_64(
    (String, double) self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_regression_result(
    RegressionResult self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_solve_result(SolveResult self, SseSerializer serializer);

  @protected
  void sse_encode_statistics_result(
    StatisticsResult self,
    SseSerializer serializer,
  );

  @protected
  void sse_encode_u_32(int self, SseSerializer serializer);

  @protected
  void sse_encode_u_64(BigInt self, SseSerializer serializer);

  @protected
  void sse_encode_u_8(int self, SseSerializer serializer);

  @protected
  void sse_encode_unit(void self, SseSerializer serializer);

  @protected
  void sse_encode_unit_result(UnitResult self, SseSerializer serializer);

  @protected
  void sse_encode_usize(BigInt self, SseSerializer serializer);

  @protected
  void sse_encode_i_32(int self, SseSerializer serializer);
}

// Section: wire_class

// ignore_for_file: camel_case_types, non_constant_identifier_names, avoid_positional_boolean_parameters, annotate_overrides, constant_identifier_names
// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import

/// generated by flutter_rust_bridge
class MathRustLibWire implements BaseWire {
  factory MathRustLibWire.fromExternalLibrary(ExternalLibrary lib) =>
      MathRustLibWire(lib.ffiDynamicLibrary);

  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  MathRustLibWire(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  MathRustLibWire.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  void store_dart_post_cobject(DartPostCObjectFnType ptr) {
    return _store_dart_post_cobject(ptr);
  }

  late final _store_dart_post_cobjectPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(DartPostCObjectFnType)>>(
        'store_dart_post_cobject',
      );
  late final _store_dart_post_cobject = _store_dart_post_cobjectPtr
      .asFunction<void Function(DartPostCObjectFnType)>();

  void wire__crate__api__anova(
    int port_,
    ffi.Pointer<wire_cst_list_list_prim_f_64_strict> groups,
    double alpha,
  ) {
    return _wire__crate__api__anova(port_, groups, alpha);
  }

  late final _wire__crate__api__anovaPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_list_prim_f_64_strict>,
            ffi.Double,
          )
        >
      >('frbgen_kivixa_wire__crate__api__anova');
  late final _wire__crate__api__anova = _wire__crate__api__anovaPtr
      .asFunction<
        void Function(
          int,
          ffi.Pointer<wire_cst_list_list_prim_f_64_strict>,
          double,
        )
      >();

  WireSyncRust2DartDco wire__crate__api__catalan(int n) {
    return _wire__crate__api__catalan(n);
  }

  late final _wire__crate__api__catalanPtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function(ffi.Uint64)>>(
        'frbgen_kivixa_wire__crate__api__catalan',
      );
  late final _wire__crate__api__catalan = _wire__crate__api__catalanPtr
      .asFunction<WireSyncRust2DartDco Function(int)>();

  void wire__crate__api__chi_squared_test(
    int port_,
    ffi.Pointer<wire_cst_list_prim_f_64_loose> observed,
    ffi.Pointer<wire_cst_list_prim_f_64_loose> expected,
    double alpha,
  ) {
    return _wire__crate__api__chi_squared_test(
      port_,
      observed,
      expected,
      alpha,
    );
  }

  late final _wire__crate__api__chi_squared_testPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_f_64_loose>,
            ffi.Pointer<wire_cst_list_prim_f_64_loose>,
            ffi.Double,
          )
        >
      >('frbgen_kivixa_wire__crate__api__chi_squared_test');
  late final _wire__crate__api__chi_squared_test =
      _wire__crate__api__chi_squared_testPtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_f_64_loose>,
              ffi.Pointer<wire_cst_list_prim_f_64_loose>,
              double,
            )
          >();

  WireSyncRust2DartDco wire__crate__api__combinations(int n, int r) {
    return _wire__crate__api__combinations(n, r);
  }

  late final _wire__crate__api__combinationsPtr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(ffi.Uint64, ffi.Uint64)
        >
      >('frbgen_kivixa_wire__crate__api__combinations');
  late final _wire__crate__api__combinations =
      _wire__crate__api__combinationsPtr
          .asFunction<WireSyncRust2DartDco Function(int, int)>();

  WireSyncRust2DartDco wire__crate__api__complex_convert(
    double real,
    double imag,
    bool to_polar,
  ) {
    return _wire__crate__api__complex_convert(real, imag, to_polar);
  }

  late final _wire__crate__api__complex_convertPtr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(ffi.Double, ffi.Double, ffi.Bool)
        >
      >('frbgen_kivixa_wire__crate__api__complex_convert');
  late final _wire__crate__api__complex_convert =
      _wire__crate__api__complex_convertPtr
          .asFunction<WireSyncRust2DartDco Function(double, double, bool)>();

  WireSyncRust2DartDco wire__crate__api__complex_operation(
    double a_real,
    double a_imag,
    double b_real,
    double b_imag,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> operation,
  ) {
    return _wire__crate__api__complex_operation(
      a_real,
      a_imag,
      b_real,
      b_imag,
      operation,
    );
  }

  late final _wire__crate__api__complex_operationPtr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(
            ffi.Double,
            ffi.Double,
            ffi.Double,
            ffi.Double,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )
        >
      >('frbgen_kivixa_wire__crate__api__complex_operation');
  late final _wire__crate__api__complex_operation =
      _wire__crate__api__complex_operationPtr
          .asFunction<
            WireSyncRust2DartDco Function(
              double,
              double,
              double,
              double,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            )
          >();

  void wire__crate__api__compute_limit(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> expression,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> variable,
    double approach_value,
    bool from_left,
    bool from_right,
  ) {
    return _wire__crate__api__compute_limit(
      port_,
      expression,
      variable,
      approach_value,
      from_left,
      from_right,
    );
  }

  late final _wire__crate__api__compute_limitPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Double,
            ffi.Bool,
            ffi.Bool,
          )
        >
      >('frbgen_kivixa_wire__crate__api__compute_limit');
  late final _wire__crate__api__compute_limit =
      _wire__crate__api__compute_limitPtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              double,
              bool,
              bool,
            )
          >();

  void wire__crate__api__compute_statistics(
    int port_,
    ffi.Pointer<wire_cst_list_prim_f_64_loose> data,
  ) {
    return _wire__crate__api__compute_statistics(port_, data);
  }

  late final _wire__crate__api__compute_statisticsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_f_64_loose>,
          )
        >
      >('frbgen_kivixa_wire__crate__api__compute_statistics');
  late final _wire__crate__api__compute_statistics =
      _wire__crate__api__compute_statisticsPtr
          .asFunction<
            void Function(int, ffi.Pointer<wire_cst_list_prim_f_64_loose>)
          >();

  void wire__crate__api__confidence_interval_mean(
    int port_,
    ffi.Pointer<wire_cst_list_prim_f_64_loose> data,
    double confidence_level,
  ) {
    return _wire__crate__api__confidence_interval_mean(
      port_,
      data,
      confidence_level,
    );
  }
